--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
     
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <title>Ultra Template</title>
+        <script defer="defer" src="/public/js/main.5d524209.js"></script>
+        <link href="/public/css/main.da53c509.css" rel="stylesheet">
+  
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
